--- a/ScriptMaker/ScriptMaker/Form1.resx
+++ b/ScriptMaker/ScriptMaker/Form1.resx
@@ -132,4 +132,7 @@
   <metadata name="SEBgmFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>635, 17</value>
   </metadata>
+  <metadata name="colorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>778, 17</value>
+  </metadata>
 </root>
